# Hum

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
.planning/intel/: README.md  inventory.md
docs/: CHANGELOG.md  RELEASE_NOTES.md
docs/superpowers/plans/: 2026-05-21-hum-artist-info-panel.md  2026-05-21-hum-mica-acrylic-backdrop.md  2026-05-21-hum-pandora-web-uia-bridge.md  2026-05-22-hum-ad-break-detection.md
docs/superpowers/specs/: 2026-05-21-hum-artist-info-panel-design.md  2026-05-21-hum-mica-acrylic-backdrop-design.md  2026-05-21-hum-pandora-web-uia-bridge-design.md  2026-05-22-hum-ad-break-detection-design.md
docs/systems/: INDEX.md  SYSTEM_TEMPLATE.md
src/: App.tsx  Commentary.tsx  DevConsole.tsx  Overlay.tsx  Settings.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/: default_promos.json
src-tauri/scripts/: itunes_poll.ps1
src-tauri/src/: artist_info.rs  artist_window.rs  backdrop.rs  commentary.rs  contrast.rs  itunes.rs  lib.rs  lyrics.rs  main.rs  mode.rs  pandora_desktop.rs  promos.rs  settings.rs  smtc.rs  streamer.rs  streamer_overlay.html  web_bridge.rs  youtube_bridge.rs
src/artist-panel/: ArtistPanel.tsx  index.html  main.tsx
