[package]
name = "lyric-overlay"
version = "0.7.2"
description = "Real-time synced lyrics overlay for any Windows media source"
authors = ["SYVR Studios"]
edition = "2021"
default-run = "lyric-overlay"

[lib]
name = "lyric_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "process", "io-util"] }
reqwest = { version = "0.13", features = ["json", "cookies"] }
base64 = "0.22"
tempfile = "3"
regex = "1"
xcap = "0.9.4"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Media",
  "Media_Control",
  "Foundation",
  "Foundation_Collections",
  "Storage_Streams",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
