[package]
name = "hum"
version = "0.13.28"
description = "Real-time synced lyrics overlay for any Windows media source"
authors = ["SYVR Studios"]
edition = "2021"
default-run = "hum"

[lib]
name = "hum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "process", "io-util", "time"] }
reqwest = { version = "0.13", features = ["json", "cookies"] }
base64 = "0.22"
tempfile = "3"
regex = "1"
urlencoding = "2"
opener = "0.7"
rand = "0.9"
tauri-plugin-opener = "2"
xcap = "0.9.4"
tauri-plugin-window-state = "2.4.1"
axum = { version = "0.8.9", features = ["tokio"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2"
uiautomation = "0.25"
lru = "0.18"
async-stream = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Media",
  "Media_Control",
  "Foundation",
  "Foundation_Collections",
  "Storage_Streams",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Dwm",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
